Fixed some alignement issues

--- a/ChimeraSheet.css
+++ b/ChimeraSheet.css
@@ -198,7 +198,7 @@ button:active
 }
 
 .charsheet input[type=text].sheet-smalltext{
-    width:60px;
+    width:55px;
     height: 18px;
     margin:0px;
 	background-color: #FCE5CD;
